--- a/desktop/src/App.css
+++ b/desktop/src/App.css
@@ -2,7 +2,6 @@ body,
 html {
   height: 100%;
   margin: 0px;
-  padding-top: 20px;
 }
 
 #root,
@@ -54,41 +53,41 @@ img:hover {
   background-image: url(signInBackground.png);
 }
 
-blockquote{
+blockquote {
   font-size: 1em;
-  width:100%;
-  margin:50px auto;
-  font-style:italic;
+  width: 100%;
+  margin: 50px auto;
+  font-style: italic;
   color: #555555;
-  padding:10px 10px 10px 40px;
-  border-left:8px solid rgb(255, 166, 0) ;
-  line-height:1.6;
+  padding: 10px 10px 10px 40px;
+  border-left: 8px solid rgb(255, 166, 0);
+  line-height: 1.6;
   position: relative;
-  background:#EDEDED;
+  background: #ededed;
 }
 
-blockquote::before{
-  font-family:Arial;
+blockquote::before {
+  font-family: Arial;
   content: "\201C";
-  color:rgb(255, 136, 0);
-  font-size:4em;
+  color: rgb(255, 136, 0);
+  font-size: 4em;
   position: absolute;
   left: 10px;
-  top:-10px;
+  top: -10px;
 }
 
-blockquote::after{
-  content: '';
+blockquote::after {
+  content: "";
 }
 
-blockquote span{
-  display:block;
-  color:#333333;
+blockquote span {
+  display: block;
+  color: #333333;
   font-style: normal;
   font-weight: bold;
-  margin-top:1em;
+  margin-top: 1em;
 }
 
-pre{
+pre {
   background-color: #ececec;
 }
