--- a/desktop/src/App.css
+++ b/desktop/src/App.css
@@ -110,8 +110,8 @@ pre {
   background-color: #ececec;
 }
 
-/* @media print and (width: 30mm) and (height: 20mm) {
+@media print and (width: 40mm) and (height: 30mm) {
   @page {
-    margin: 2mm;
+    margin: 10mm;
   }
-} */
+}
